--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                   <img src="./assets/images/feature-icon-3.png" width="200" height="200" alt="">
                 </div>
 
-                <h3 class="h3 card-title">Warehousing and Distribution.</h3>
+                <h3 class="h3 card-title">Warehousing and Distribution</h3>
 
                 <p class="card-text" style="padding-bottom: 50px;">
                   While TAFL is actively offering freight and logistics services within the scope, TAFL is offering own warehousing facility and distribution services for valued clients
